syntax = "proto3";
package com.example;
option java_multiple_files = true;


service ProductService {
  rpc CalculateTotal (ProductRequest) returns (OrderConfirmation);
}

message ProductRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message OrderConfirmation {
  double total_price = 1;
}
